# desktop-control-local-model

./: .gitignore  README.md  TASKS.md  pyproject.toml
artifacts/: README.md
configs/: base.yaml  capture.yaml  eval.yaml  training.yaml
data/: README.md
docs/: architecture.md  safety.md
sandbox/: README.md
src/capture/: __init__.py  policy.py  recorder.py
src/data/: __init__.py  dataset.py  schemas.py
src/eval/: metrics.py
src/model/: __init__.py  baseline.py
tests/: test_capture_policy.py  test_capture_recorder.py  test_data_dataset.py  test_data_schemas.py  test_eval_metrics.py  test_model_baseline.py
tests/capture/: test_policy.py  test_recorder.py
tests/data/: test_schemas.py
